Ajout des attributs mail et complément d'adresse